fixed dialog centering when console is visible.

--- a/autom8_node/server/frontend/css/console.less
+++ b/autom8_node/server/frontend/css/console.less
@@ -53,24 +53,3 @@
 .chrome .console-container {
     right: 8px;
 }
-
-@media only screen and (max-width: 860px) {
-    .main-content-right {
-        display: none;
-    }
-
-    .main-content-left {
-        position: absolute;
-        max-width: 640px;
-        width: 100%;
-        left: 0;
-        right: 0;
-        top: 0;
-    }
-}
-
-@media only screen and (min-width: 1400px) {
-    .main-content-right {
-
-    }
-}
